--- a/growquizgrow/src/components/App/App.css
+++ b/growquizgrow/src/components/App/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center;
 }
- 
+
+
+
 #mainbody {
   background: #DE3163;
   background: -moz-linear-gradient(left, #DE3163 0%, #FFFFFF 50%, #ef98b1 100%);
@@ -11,12 +13,14 @@
 .h1 {
    text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c, 2px 2px 2px rgba(206,89,55,0.5), 2px 2px 2px rgba(206,89,55,0.5);
 }
-.button {
-  display: block;
+button {
+  
+  
   border-radius: 8px;
   transition-duration: 0.4s;
+  
 }
-.button:hover {
+button:hover {
   background-color: #7C7F70;
   color: white;
 }
